--- a/sites/index.html
+++ b/sites/index.html
@@ -18,7 +18,6 @@
     </style>
     <script>
         function add() {
-            console.log("KURWAAA")
             const xhttp = new XMLHttpRequest()
             const name = document.getElementById("addName").value
             const surname = document.getElementById("addSurname").value
@@ -31,17 +30,31 @@
                 Age: age
             })
             xhttp.setRequestHeader("Content-type", "application/json")
-            console.log(json)
             xhttp.send(json)
             }
         function del() {
-            console.log("KURWAAA")
             const xhttp = new XMLHttpRequest()
             const id = document.getElementById("deleteId").value
             xhttp.open("DELETE", "http://localhost:8080/v1/student/"+id)
             xhttp.withCredentials = false
             xhttp.setRequestHeader("Content-type", "application/json")
             xhttp.send()
+        }
+        function update() {
+            const xhttp = new XMLHttpRequest()
+            const id = document.getElementById("updateId").value
+            const name = document.getElementById("updateName").value
+            const surname = document.getElementById("updateSurname").value
+            const age = document.getElementById("updateAge").value
+            xhttp.open("PUT", "http://localhost:8080/v1/student/"+id)
+            xhttp.withCredentials = false
+            xhttp.setRequestHeader("Content-type", "application/json")
+            let json = JSON.stringify({
+                Name: name,
+                Surname: surname,
+                Age: age
+            })
+            xhttp.send(json)
         }
     </script>
 </head>
@@ -57,6 +70,7 @@
         <button onclick="return del()" >Delete user</button>
     </div>
     <div class="form">
+        <label>id</label><input type="text" id="updateId">
         <label>name</label><input id="updateName" type="text" />
         <label>username</label><input id="updateSurname" type="text" />
         <label>age</label><input id="updateAge" type="number" min="5" />
